[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surprise_explora"
version = "0.0.0"
dependencies = [
    "altair>=5.5.0",
    "anywidget",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "vega-datasets>=0.9.0",
    "vegafusion-python-embed>=1.6.9",
    "vegafusion>=2.0.1",
    "vl-convert-python>=1.7.0",
]
readme = "README.md"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/surprise_explora/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/surprise_explora/static/widget.js"]
skip-if-exists = ["src/surprise_explora/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "yarn"
build_cmd = "build"
